add endgame menu

--- a/CSC8503/GameTech/imgui.ini
+++ b/CSC8503/GameTech/imgui.ini
@@ -19,8 +19,8 @@ Size=300,100
 Collapsed=0
 
 [Window][Main Menu]
-Pos=424,266
-Size=380,199
+Pos=221,239
+Size=380,230
 Collapsed=0
 
 [Window][Name]
@@ -31,5 +31,10 @@ Collapsed=0
 [Window][Time Window]
 Pos=650,20
 Size=550,680
+Collapsed=0
+
+[Window][Pause menu]
+Pos=400,200
+Size=550,400
 Collapsed=0
 
