--- a/CSC8503/GameTech/imgui.ini
+++ b/CSC8503/GameTech/imgui.ini
@@ -19,8 +19,8 @@ Size=300,100
 Collapsed=0
 
 [Window][Main Menu]
-Pos=221,239
-Size=380,230
+Pos=367,200
+Size=649,332
 Collapsed=0
 
 [Window][Name]
@@ -36,5 +36,15 @@ Collapsed=0
 [Window][Pause menu]
 Pos=400,200
 Size=550,400
+Collapsed=0
+
+[Window][Name window]
+Pos=50,550
+Size=1000,1000
+Collapsed=0
+
+[Window][Power window]
+Pos=800,450
+Size=1000,1000
 Collapsed=0
 
