--- a/CSC8503/GameTech/imgui.ini
+++ b/CSC8503/GameTech/imgui.ini
@@ -19,8 +19,8 @@ Size=300,100
 Collapsed=0
 
 [Window][Main Menu]
-Pos=367,200
-Size=649,332
+Pos=454,190
+Size=336,371
 Collapsed=0
 
 [Window][Name]
@@ -29,22 +29,32 @@ Size=1000,1000
 Collapsed=0
 
 [Window][Time Window]
-Pos=650,20
-Size=550,680
+Pos=466,6
+Size=317,95
 Collapsed=0
 
 [Window][Pause menu]
-Pos=400,200
-Size=550,400
+Pos=511,314
+Size=229,176
 Collapsed=0
 
 [Window][Name window]
-Pos=50,550
-Size=1000,1000
+Pos=966,593
+Size=276,71
 Collapsed=0
 
 [Window][Power window]
-Pos=800,450
-Size=1000,1000
+Pos=16,575
+Size=344,109
+Collapsed=0
+
+[Window][Endgame]
+Pos=518,331
+Size=224,161
+Collapsed=0
+
+[Window][Endgamehud]
+Pos=471,168
+Size=318,89
 Collapsed=0
 
