simple patrol and chase AI

--- a/CSC8503/CSC8503Common/CSC8503Common.vcxproj
+++ b/CSC8503/CSC8503Common/CSC8503Common.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="BoundingOOBB.h" />
     <ClInclude Include="BoundingSphere.h" />
     <ClInclude Include="BoundingVolume.h" />
+    <ClInclude Include="EnemyAI.h" />
     <ClInclude Include="LoadingScreen.h" />
     <ClInclude Include="NavigationGrid.h" />
     <ClInclude Include="NavigationMap.h" />
@@ -225,6 +226,7 @@
     <ClCompile Include="BoundingVolume.cpp" />
     <ClCompile Include="CollisionDetection.cpp" />
     <ClCompile Include="Debug.cpp" />
+    <ClCompile Include="EnemyAI.cpp" />
     <ClCompile Include="GameClient.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameServer.cpp" />
