--- a/CSC8503/CSC8503Common/CSC8503Common.vcxproj.filters
+++ b/CSC8503/CSC8503Common/CSC8503Common.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClInclude Include="LoadingScreen.h">
       <Filter>Other</Filter>
     </ClInclude>
+    <ClInclude Include="EnemyAI.h">
+      <Filter>AI</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CollisionDetection.cpp">
@@ -208,6 +211,9 @@
     </ClCompile>
     <ClCompile Include="Test.cpp">
       <Filter>UnitTests</Filter>
+    </ClCompile>
+    <ClCompile Include="EnemyAI.cpp">
+      <Filter>AI</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
