--- a/CSC8503/GameTech/GameTech.vcxproj
+++ b/CSC8503/GameTech/GameTech.vcxproj
@@ -219,6 +219,7 @@
     <ClCompile Include="NetworkedGame.cpp" />
     <ClCompile Include="NetworkPlayer.cpp" />
     <ClCompile Include="Particles\ParticleEffect.cpp" />
+    <ClCompile Include="Post Processing\Quad.cpp" />
     <ClCompile Include="Sound\AudioEngine.cpp">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">C:\Users\Admin\Desktop\Codebase\CSC8503\GameTech;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
@@ -245,6 +246,7 @@
     <ClInclude Include="Particles\ParticleEffect.h" />
     <ClInclude Include="Particles\Particle.h" />
     <ClInclude Include="Particles\ParticleEmitter.h" />
+    <ClInclude Include="Post Processing\Quad.h" />
     <ClInclude Include="Sound\AudioEngine.h" />
     <ClInclude Include="Particles\SphereEmitter.h" />
     <ClInclude Include="TutorialGame.h" />
