--- a/CSC8503/GameTech/GameTech.vcxproj.filters
+++ b/CSC8503/GameTech/GameTech.vcxproj.filters
@@ -12,6 +12,9 @@
     <ClCompile Include="TutorialGame.cpp" />
     <ClCompile Include="LevelBase.h" />
     <ClCompile Include="LevelTest.h" />
+    <ClCompile Include="arrow.cpp" />
+    <ClCompile Include="ball.cpp" />
+    <ClCompile Include="Post Processing\Quad.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Library\imgui\imconfig.h" />
@@ -33,5 +36,8 @@
     <ClInclude Include="Particles\SphereEmitter.h" />
     <ClInclude Include="TutorialGame.h" />
     <ClInclude Include="Level1.h" />
+    <ClInclude Include="arrow.h" />
+    <ClInclude Include="ball.h" />
+    <ClInclude Include="Post Processing\Quad.h" />
   </ItemGroup>
 </Project>
