--- a/CSC8503/CSC8503Common/CSC8503Common.vcxproj.filters
+++ b/CSC8503/CSC8503Common/CSC8503Common.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClInclude Include="LoadingScreen.h">
       <Filter>Other</Filter>
     </ClInclude>
+    <ClInclude Include="Buoyancy.h">
+      <Filter>Physics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CollisionDetection.cpp">
@@ -209,8 +212,8 @@
     <ClCompile Include="Test.cpp">
       <Filter>UnitTests</Filter>
     </ClCompile>
-    <ClCompile Include="Test1.cpp">
-      <Filter>UnitTests</Filter>
+    <ClCompile Include="Buoyancy.cpp">
+      <Filter>Physics</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
